RESOLVED FIXED 259023
Idle sweeping should not schedule a timer callback for more sweeping.
https://bugs.webkit.org/show_bug.cgi?id=259023
Summary Idle sweeping should not schedule a timer callback for more sweeping.
Mark Lam
Reported 2023-07-08 16:11:35 PDT
Idle time work should only do work during idle time. Starting a timer as we come out of idle will add work that contends with non-idle activity.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-08 16:12:06 PDT
Mark Lam
Comment 2 2023-07-08 16:15:03 PDT
EWS
Comment 3 2023-07-08 17:45:12 PDT
Committed 265884@main (7e5881c7a9e7): <https://commits.webkit.org/265884@main> Reviewed commits have been landed. Closing PR #15671 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.