Cherry-pick 7e5881c7a9e7. rdar://problem/111962239

Idle sweeping should not schedule a timer callback for more sweeping.
    https://bugs.webkit.org/show_bug.cgi?id=259023
    rdar://111962239

    Reviewed by Wenson Hsieh.

    Idle time work should only do work during idle time.  Starting a timer as we come out of
    idle will add work that contends with non-idle activity.

    * Source/JavaScriptCore/heap/IncrementalSweeper.cpp:
    (JSC::IncrementalSweeper::doSweep):

    Canonical link: https://commits.webkit.org/265884@main

Identifier: 265870.173@safari-7616-branch